# base-node-reth

./: .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  deny.toml  lychee.toml
crates/batcher/encoder/: Cargo.toml  README.md
crates/batcher/encoder/src/: config.rs  encoder.rs  lib.rs  metrics.rs  pipeline.rs  reorg.rs  step.rs  submission.rs  types.rs
crates/batcher/service/: Cargo.toml
crates/batcher/service/src/: config.rs  l1_source.rs  l2_block_parity.rs  lib.rs  metrics.rs  parity_error.rs  parity_normalized.rs  parity_normalizer.rs  recent_txs.rs  safe_head_poller.rs  service.rs  shadow_parity.rs  source.rs  subscription.rs  throttle.rs
crates/builder/cli/: Cargo.toml  README.md
crates/builder/cli/src/: args.rs  lib.rs
crates/common/chains/: Cargo.toml  README.md
crates/common/chains/src/: chain.rs  config.rs  derived.rs  lib.rs  macros.rs  registry.rs  test_utils.rs  upgrade.rs  upgrades.rs
crates/common/chains/tests/: hardfork_consistency.rs  upgrade_consistency.rs
crates/common/evm/: Cargo.toml  README.md
crates/common/evm/src/: base_time.rs  beryl_metrics.rs  canyon.rs  cobalt.rs  compat.rs  consensus_compat.rs  eip8130.rs  eip8130_phase_statuses.rs  evm.rs  executor.rs  executor_factory.rs  factory.rs  handler.rs  l1block.rs  lib.rs  precompiles.rs  receipt_builder.rs  rollup_config_ext.rs  spec.rs  spec_id.rs  tx_env.rs
crates/common/observability-events/: Cargo.toml  README.md
crates/common/observability-events/src/: emit.rs  event.rs  id.rs  lib.rs  metrics.rs  writer.rs
crates/common/precompile-macros/: Cargo.toml  README.md
crates/common/precompile-macros/src/: accounting.rs  contract.rs  layout.rs  lib.rs  namespace.rs  packing.rs  precompile.rs  storable.rs  storable_primitives.rs  storable_tests.rs  test_fields.rs  utils.rs
crates/common/precompile-storage/: Cargo.toml  README.md
crates/common/precompile-storage/src/: error.rs  evm.rs  hashmap.rs  journal.rs  lib.rs  packing.rs  provider.rs  registration.rs  storage_ctx.rs
crates/common/precompile-storage/tests/: contract.rs
crates/consensus/registry/: Cargo.toml  README.md
crates/consensus/registry/src/: lib.rs  registry.rs
crates/consensus/registry/tests/: hardfork_consistency.rs
crates/consensus/upgrades/: Cargo.toml
crates/consensus/upgrades/src/: ecotone.rs  fjord.rs  isthmus.rs  jovian.rs  lib.rs  test_utils.rs
crates/execution/eip8130/: Cargo.toml  README.md
crates/execution/eip8130-authorize/: Cargo.toml  README.md
crates/execution/eip8130-authorize/src/: authorize.rs  error.rs  lib.rs  resolved.rs
crates/execution/eip8130-nonce/: Cargo.toml  README.md
crates/execution/eip8130-nonce/src/: lib.rs
crates/execution/eip8130-rpc/: Cargo.toml  README.md
crates/execution/eip8130-rpc-node/: Cargo.toml  README.md
crates/execution/eip8130-rpc-node/src/: extension.rs  lib.rs
crates/execution/eip8130-rpc-node/tests/: receipt.rs  rpc.rs
crates/execution/eip8130-rpc/src/: cobalt_gate.rs  estimate.rs  eth.rs  lib.rs  nonce_reader.rs
crates/execution/eip8130-state/: Cargo.toml  README.md
crates/execution/eip8130-state/src/: account_config.rs  lib.rs
crates/execution/eip8130-tx/: Cargo.toml  README.md
crates/execution/eip8130-tx/src/: config.rs  error.rs  lib.rs  scope.rs  verify.rs
crates/execution/eip8130/src/: account_config.rs  apply.rs  authorize.rs  authorize_error.rs  config.rs  dispatch.rs  error.rs  fee.rs  intrinsic.rs  lib.rs  nonce_error.rs  outcome.rs  recovered.rs  resolved.rs  schedule.rs  scope.rs  transaction.rs  tx_error.rs  validate.rs  verify.rs
crates/infra/audit/: Cargo.toml  README.md
crates/infra/audit/migrations/: 001_transaction_events.sql
crates/infra/audit/src/: archiver.rs  lib.rs  metrics.rs  publisher.rs  reader.rs  rpc.rs  storage.rs  transaction_events.rs  types.rs
crates/infra/audit/tests/: postgres_transaction_events.rs
crates/infra/load-tests/: Cargo.toml  Justfile  README.md
crates/infra/load-tests/examples/: devnet.yaml  load_test.rs  real-token-devnet.yaml.template  real-token-mainnet-snapshot.yaml  real-token-sepolia.yaml  sepolia.yaml  zeronet.yaml
crates/infra/load-tests/src/: executor.rs  lib.rs
crates/infra/load-tests/tests/: smoke.rs
crates/infra/sidecrush/: Cargo.toml  README.md
crates/infra/sidecrush/src/: lib.rs  metrics.rs
crates/infra/snark-e2e/: Cargo.toml  README.md
crates/infra/snark-e2e/src/: lib.rs  snark_e2e.rs
crates/infra/snark-e2e/tests/: snark_groth16_e2e.rs  snark_plonk_e2e.rs
crates/infra/telemetry/: Cargo.toml  README.md
crates/infra/telemetry/src/: lib.rs  p2p.rs  prober.rs  server.rs
crates/proof/challenge/: Cargo.toml
crates/proof/challenge/src/: anchor.rs  bond.rs  cli.rs  config.rs  driver.rs  error.rs  health.rs  lib.rs  metrics.rs  pending.rs  proof_adapter.rs  scanner.rs  service.rs  submitter.rs  test_utils.rs  validator.rs
crates/proof/challenge/tests/: driver.rs
crates/proof/proposer/: Cargo.toml  README.md  justfile
crates/proof/proposer/src/: admin.rs  balance.rs  cli.rs  config.rs  constants.rs  driver.rs  error.rs  health.rs  lib.rs  metrics.rs  output_proposer.rs  pipeline.rs  proof_adapter.rs  proof_collector.rs  proof_dispatcher.rs  proof_recovery.rs  proof_submitter.rs  proof_target.rs  proposal_intervals.rs  service.rs  test_utils.rs
crates/proof/prover-service/: Cargo.toml  README.md  build.rs
crates/proof/prover-service/client/: Cargo.toml  README.md
crates/proof/prover-service/db/: Cargo.toml  README.md
crates/proof/prover-service/proto/: prover_service.proto
crates/proof/prover-service/protocol/: Cargo.toml  README.md
crates/proof/prover-service/src/: lib.rs  metadata.rs  metrics.rs  proof_request_manager.rs  request.rs  snark_e2e.rs
crates/proof/prover-service/tests/: get_proof_error_message.rs  idempotency.rs  mock_backend_e2e.rs  (+2 more)
crates/proof/submission/: Cargo.toml  README.md
crates/proof/worker/: Cargo.toml  README.md
crates/utilities/balance-monitor/: Cargo.toml
crates/utilities/l1-head/: Cargo.toml  README.md
crates/utilities/optimism-rpc/: Cargo.toml  README.md
(+1543 files in other folders)
