[package]
name = "base-batcher-encoder"
description = "Batcher encoding pipeline: BatchPipeline trait and BatchEncoder state machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
clap = [ "dep:clap" ]
metrics = [ "base-metrics/metrics", "dep:metrics" ]

[dependencies]
tracing = { workspace = true, features = ["std"] }
base-comp = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
alloy-eips = { workspace = true, features = ["std"] }
base-protocol = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["std"] }
base-metrics.workspace = true
metrics = { workspace = true, optional = true }
rand = { workspace = true, features = ["std", "small_rng"] }
base-alloy-consensus = { workspace = true, features = ["std"] }
base-consensus-genesis = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["std"] }
rstest.workspace = true
