[package]
name = "base-builder-cli"
description = "Base Builder CLI arguments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-node-core.workspace = true
base-builder-core.workspace = true
base-builder-metering.workspace = true
base-observability-events.workspace = true

# cli
clap = { workspace = true, features = ["derive", "env"] }

# misc
eyre.workspace = true

[dev-dependencies]
# workspace
base-bundles.workspace = true

# misc
alloy-primitives.workspace = true
rstest.workspace = true
