[package]
name = "base-common-evm"
description = "EVM implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-evm.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# base
base-common-flz.workspace = true
base-common-chains.workspace = true
base-revm = { workspace = true, features = ["alloy"] }
base-common-consensus = { workspace = true, features = ["evm"] }

# revm
revm.workspace = true

# misc
auto_impl.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
alloy-hardforks.workspace = true

[features]
default = [ "std" ]
std = [
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-evm/std",
	"alloy-primitives/std",
	"base-common-consensus/std",
	"base-common-flz/std",
	"base-revm/std",
	"revm/std",
	"thiserror/std",
]
reth = [ "base-common-consensus/reth", "base-revm/reth", "std" ]
