[package]
name = "base-consensus-registry"
version.workspace = true
description = "A registry of chain configs"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-eips.workspace = true
alloy-chains.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true
alloy-primitives = { workspace = true, features = ["map"] }

# misc
spin.workspace = true

[features]
default = []
std = [
	"alloy-chains/std",
	"alloy-eips/std",
	"alloy-genesis/std",
	"alloy-primitives/std",
	"spin/std",
]
