[package]
name = "base-consensus-upgrades"
version.workspace = true
description = "Consensus hardfork types for Base"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-protocol.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }

# Base Alloy
base-common-consensus.workspace = true

[dev-dependencies]
revm.workspace = true
rstest.workspace = true
base-revm.workspace = true
alloy-primitives = { workspace = true, features = ["rand", "arbitrary"] }

[features]
default = []
std = [
	"alloy-eips/std",
	"alloy-primitives/std",
	"base-common-consensus/std",
	"base-protocol/std",
]
k256 = [ "alloy-primitives/k256", "base-common-consensus/k256" ]
kzg = [ "alloy-eips/kzg", "base-common-consensus/kzg", "std" ]
