[package]
name = "base-execution-eip8130-authorize"
description = "EIP-8130 actor authorization (stateful authenticate step over AccountConfiguration)"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true

# base
base-execution-eip8130.workspace = true
base-precompile-storage.workspace = true
base-execution-eip8130-state.workspace = true
base-common-consensus = { workspace = true, default-features = false }

# misc
thiserror.workspace = true

[dev-dependencies]
k256 = { workspace = true, features = ["ecdsa"] }
p256 = { workspace = true, features = ["ecdsa"] }
base-precompile-storage = { workspace = true, features = ["test-utils"] }
