[package]
name = "base-execution-eip8130-tx"
description = "EIP-8130 transaction actor authorization (sender + payer scope gating)"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true

# base
base-execution-eip8130-state.workspace = true
base-execution-eip8130-authorize.workspace = true
base-common-consensus = { workspace = true, default-features = false, features = ["k256"] }

# misc
thiserror.workspace = true

[dev-dependencies]
k256 = { workspace = true, features = ["ecdsa"] }
base-precompile-storage = { workspace = true, features = ["test-utils"] }
