[package]
name = "base-execution-eip8130"
description = "EIP-8130 account-abstraction authenticator dispatch (enshrined canonical set)"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# crypto
sha2.workspace = true
base64.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
p256 = { workspace = true, features = ["ecdsa"] }

# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

# base
base-common-consensus = { workspace = true, default-features = false }

# misc
thiserror.workspace = true
