[package]
name = "audit-archiver-lib"
version.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["tokio", "http1", "json"] }
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
base-bundles.workspace = true
base-observability-events.workspace = true
metrics = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = ["server", "macros", "http-client"] }
uuid = { workspace = true, features = ["v5", "serde"] }
serde = { workspace = true, features = ["std", "derive"] }
alloy-consensus = { workspace = true, features = ["std"] }
base-metrics = { workspace = true, features = ["metrics"] }
alloy-primitives = { workspace = true, features = ["map-foldhash", "serde"] }
aws-sdk-s3 = { workspace = true, features = ["rustls", "default-https-client", "rt-tokio"] }
moka = { workspace = true, features = ["sync"] }
jsonrpsee-types.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "json", "migrate", "macros", "tls-native-tls"] }
tower-http.workspace = true

[dev-dependencies]
base-bundles = { workspace = true, features = ["test-utils"] }
testcontainers = { workspace = true, features = ["blocking"] }
aws-config = { workspace = true, features = ["default-https-client", "rt-tokio"] }
testcontainers-modules = { workspace = true, features = ["postgres", "minio"] }

[features]
default = [ "metrics" ]
metrics = [
	"base-metrics/metrics",
	"base-observability-events/metrics",
	"dep:metrics",
	"tower-http/metrics",
]
