[package]
name = "base-load-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core library for Base network load testing and benchmarking"

[[bin]]
name = "base-load-test"
path = "src/bin/load_test.rs"

[lints]
workspace = true

[dependencies]
# alloy
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-signer-local = { workspace = true, features = ["mnemonic"] }

# base
base-cli-utils.workspace = true
base-tx-manager.workspace = true
base-alloy-network.workspace = true
base-common-rpc-types.workspace = true

# display
indicatif.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

# misc
url.workspace = true
eyre.workspace = true
rand.workspace = true
revm.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
humantime.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
