[package]
name = "base-telemetry-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio-util.workspace = true
anyhow = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
base-health = { workspace = true, features = ["axum-server"] }
clap = { workspace = true, features = ["derive", "env", "std"] }
axum = { workspace = true, features = ["tokio", "http1", "json"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
reqwest.workspace = true
