[package]
name = "base-challenger"
description = "Base Challenger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-trie = { workspace = true, features = ["std"] }

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Tracing
tracing.workspace = true

# Serialization
serde.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true

# CLI
base-cli-utils.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

# Contracts
base-proof-contracts.workspace = true

# Transaction management
base-tx-manager.workspace = true

# Balance Monitor
base-balance-monitor.workspace = true

# RPC
base-proof-rpc.workspace = true

# ZK proof client
base-zk-client.workspace = true

# Protocol
base-protocol.workspace = true

# Proof
base-proof-primitives = { workspace = true, features = ["serde", "std", "rpc-client"] }

# JSON-RPC
jsonrpsee.workspace = true

# Metrics
base-metrics.workspace = true
metrics = { workspace = true, optional = true }

# TLS
rustls = { workspace = true, features = ["ring"] }

# Runtime
base-runtime = { workspace = true, features = ["tokio"] }

# Shutdown
tokio-util.workspace = true

# Health
base-health = { workspace = true, features = ["axum-server"] }

# Derive
derive_more = { workspace = true, features = ["debug"] }

# Misc
url.workspace = true
humantime.workspace = true
uuid = { workspace = true, features = ["v5"] }

# Test utilities (optional)
serde_json = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
base-challenger = { path = ".", features = ["test-utils"] }

[features]
metrics = [ "base-metrics/metrics", "base-tx-manager/metrics", "dep:metrics" ]
test-utils = [ "base-protocol/test-utils", "serde_json" ]
