[package]
name = "base-proposer"
description = "Base Proposer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-eips.workspace = true
alloy-contract.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-signer-local.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-transport-http.workspace = true

# Base Alloy
base-alloy-network.workspace = true
base-common-rpc-types.workspace = true
base-alloy-consensus = { workspace = true, features = ["std", "serde"] }

# Tx Manager
base-tx-manager.workspace = true

# Balance Monitor
base-balance-monitor.workspace = true

# Proof
base-proof-rpc.workspace = true
base-proof-contracts.workspace = true
base-proof-primitives = { workspace = true, features = ["rpc-client"] }

# Consensus
base-consensus-genesis = { workspace = true, features = ["serde"] }

# JSON-RPC
jsonrpsee = { workspace = true, features = ["server", "macros"] }

# Async
tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true

# CLI
base-cli-utils.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

# Metrics
base-metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics = { workspace = true, optional = true }

# TLS
rustls = { workspace = true, features = ["ring"] }

# Health
base-health = { workspace = true, features = ["axum-server"] }

# Misc
hex.workspace = true
url.workspace = true
bytes.workspace = true
humantime.workspace = true

[dev-dependencies]
rstest.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }

[features]
metrics = [ "base-metrics/metrics", "base-tx-manager/metrics", "dep:metrics" ]
