[package]
name = "base-proposer"
description = "Base Proposer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-eips.workspace = true
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true

# Tx Manager
base-tx-manager.workspace = true

# Retry
base-retry.workspace = true

# Balance Monitor
base-balance-monitor.workspace = true

# Proof
base-proof-rpc.workspace = true
base-optimism-rpc.workspace = true
base-proof-contracts.workspace = true
base-proof-submission.workspace = true
base-prover-service-client.workspace = true
base-prover-service-protocol.workspace = true
base-proof-primitives = { workspace = true, features = ["rpc-client"] }

# JSON-RPC
jsonrpsee = { workspace = true, features = ["server"] }

# Async
tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Tracing
tracing.workspace = true

# Serialization
serde.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true

# CLI
base-cli-utils.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

# Metrics
base-metrics.workspace = true
metrics = { workspace = true, optional = true }

# TLS
rustls = { workspace = true, features = ["ring"] }

# Health
base-health = { workspace = true, features = ["axum-server"] }

# Misc
url.workspace = true
humantime.workspace = true

[dev-dependencies]
serde_json.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
tokio = { workspace = true, features = ["test-util"] }
metrics-util = { workspace = true, features = ["debugging"] }
base-common-genesis = { workspace = true, features = ["serde"] }

[features]
metrics = [ "base-metrics/metrics", "base-tx-manager/metrics", "dep:metrics" ]
