[package]
name = "base-prover-service"
description = "Base prover service protobuf definitions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# gRPC
prost.workspace = true
prost-types.workspace = true
tonic-prost.workspace = true
tonic = { workspace = true, features = ["transport"] }

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true

[features]
server = []
