[package]
name = "base-proof-submission"
description = "Shared proof submission helpers for Base dispute games"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

# Tx Manager
base-tx-manager.workspace = true

# Proof
base-proof-contracts.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
